Implement more features transacion input homepage menu bluetooth pairing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">TimbangIkan</string>
+    <string name="enabling_bluetooth">Menghidupkan Bluetooth...</string>
+    <string name="device_discovery_started">Mencari perangkat bluetooth...</string>
+    <string name="device_discovery_stopped">Pencarian perangkat dihentikan.</string>
+    <string name="device_already_paired">Perangkat ini sudah disandingkan dan terpilih</string>
+    <string name="bluetooth_not_available_title">Bluetooth tidak tersedia</string>
+    <string name="bluetooth_not_available_message">Tidak ada fitur Bluetooth di perangkat ini. Mohon untuk mengganti perangkat anda dengan fitur Bluetooth</string>
 </resources>
